@@ -413,6 +413,29 @@ namespace {
      */
     const PGSQL_DML_STRING = UNKNOWN;
 
+#ifdef LIBPQ_HAS_PIPELINING
+    /**
+     * @var int
+     * @cvalue PGRES_PIPELINE_SYNC
+     */
+    const PGSQL_PIPELINE_SYNC = UNKNOWN;
+    /**
+     * @var int
+     * @cvalue PQ_PIPELINE_ON
+     */
+    const PGSQL_PIPELINE_ON = UNKNOWN;
+    /**
+     * @var int
+     * @cvalue PQ_PIPELINE_OFF
+     */
+    const PGSQL_PIPELINE_OFF = UNKNOWN;
+    /**
+     * @var int
+     * @cvalue PQ_PIPELINE_ABORTED
+     */
+    const PGSQL_PIPELINE_ABORTED = UNKNOWN;
+#endif
+
     function pg_connect(string $connection_string, int $flags = 0): PgSql\Connection|false {}
 
     function pg_pconnect(string $connection_string, int $flags = 0): PgSql\Connection|false {}
@@ -894,6 +917,13 @@ namespace {
      * @refcount 1
      */
     function pg_select(PgSql\Connection $connection, string $table_name, array $conditions, int $flags = PGSQL_DML_EXEC, int $mode = PGSQL_ASSOC): array|string|false {}
+
+#ifdef LIBPQ_HAS_PIPELINING
+    function pg_enter_pipeline_mode(PgSql\Connection $connection): bool {}
+    function pg_exit_pipeline_mode(PgSql\Connection $connection): bool {}
+    function pg_pipeline_sync(PgSql\Connection $connection): bool {}
+    function pg_pipeline_status(PgSql\Connection $connection): int {}
+#endif
 }
 
 namespace PgSql {
