@@ -118,6 +118,7 @@ PHP                                                                        NEWS
 - PGSQL:
   . pg_fetch_object raises a ValueError instead of an Exception.
     (David Carlier)
+  . Added GH-9344, pipeline mode support. (David Carlier)
 
 - Phar:
   . Fix memory leak in phar_rename_archive(). (stkeke)
